Webadmin/src/main/webapp/assets/css/custom.css
/* ... */
.hoverMe:hover .HoverBx
{
    display: block;
}
.HoverBx a i,.HoverBx button i
{
    transition: font-size .2s linear .1s;
}
.HoverBx:hover a
{
    color: orange;
}
.HoverBx a:hover i,.HoverBx button:hover i
{
    color: orange;
    font-size: 20px;
}
.btn.btn-primary, .btn.btn-primary:hover, .btn.btn-primary:focus, .btn.btn-primary:active, .btn.btn-primary.active, .btn.btn-primary:active:focus, .btn.btn-primary:active:hover, .btn.btn-primary.active:focus, .btn.btn-primary.active:hover, .open>.btn.btn-primary.dropdown-toggle, .open>.btn.btn-primary.dropdown-toggle:focus, .open>.btn.btn-primary.dropdown-toggle:hover, .navbar .navbar-nav>li>a.btn.btn-primary, .navbar .navbar-nav>li>a.btn.btn-primary:hover, .navbar .navbar-nav>li>a.btn.btn-primary:focus, .navbar .navbar-nav>li>a.btn.btn-primary:active, .navbar .navbar-nav>li>a.btn.btn-primary.active, .navbar .navbar-nav>li>a.btn.btn-primary:active:focus, .navbar .navbar-nav>li>a.btn.btn-primary:active:hover, .navbar .navbar-nav>li>a.btn.btn-primary.active:focus, .navbar .navbar-nav>li>a.btn.btn-primary.active:hover, .open>.navbar .navbar-nav>li>a.btn.btn-primary.dropdown-toggle, .open>.navbar .navbar-nav>li>a.btn.btn-primary.dropdown-toggle:focus, .open>.navbar .navbar-nav>li>a.btn.btn-primary.dropdown-toggle:hover
{
  background-color: #ff9800;
}
.FilterModalCon .modal-footer .btn-simple
{
    border: 1px solid;
}
.FilterModalCon span.d-big-arrow-icon
{
    padding-top: 32px;
}
.FilterModalCon span.d-arrow-icon
{
    padding-top: 30px;
}
.btn-group.open>.dropdown-toggle.btn.btn-primary, .btn-group-vertical.open>.dropdown-toggle.btn.btn-primary
{
  background-color: #ff9800;
}
.Flt_lft
{
    float: left;
}
.Flt_rgt
{
    float: right;
}
/* Checklist css*/
.checklistLftCon .Flt_lft
{
    width: 85%;
}
.checklistLftCon .Flt_rgt
{
    width: 15%;
}
.checklistLftCon .btn.btn-success
{
    padding: 5px;
    margin: 5px;
}

h3.HeadingTxt
{
    background: #f9f9f9;
    padding: 5px;
    font-size: 20px;
    font-weight: 400;
}
.titleCon
{
    text-align: center;

    width: 50%;
    margin: 0 auto;
    padding: 5px 0;
    background: #fff;
    border: 1px solid #ffeaca;
    border-radius: 5px;
    box-shadow: 1px 0px 5px 0px #ffdeae;
    border-left: 4px solid #ff9800;
    border-right: 4px solid #ff9800;

}
.titleCon h3
{
    font-weight: 400;
    font-size: 19px;
    margin: 0;
}


 .docsRow
 {
   padding-top:20px;
 }
.DocsCon:hover .DeleteBtn,.DocsCon:hover .DownloadBtn
{
	display:block;
}
.DeleteBtn
{
	position: absolute;
    width: 25px;
    height: 25px;
    background: #ff0000;
    border-radius: 50%;
    right: 45px;
    top: -15px;
    display:none;
    transition: all 1s ease;
    z-index: 18;
}
.DeleteBtn i
{
	color: white;
    font-size: 18px;
    cursor:pointer;
    padding-top: 3px;
}

.DownloadBtn
{
    position: absolute;
    width: 80px;
    height: 80px;
    right: 26%;
    top: 0;
    background: #ffffffd6;
    z-index: 14;
    display:none;
}
.DownloadBtn i
{
    padding-top: 9px;
    font-size: 40px;
    cursor:pointer;
}

input.InputTxtCaps
{
    text-transform: capitalize;
}
input.InputTxtCapsAll
{
    text-transform: uppercase;
}
.selectTxtCaps option
{
    text-transform: uppercase;
}

textarea.InputTxtCaps
{
    text-transform: capitalize;
}




.caps
{
    text-transform: capitalize;
}
.TxtFirstCaps
{
    text-transform: capitalize ;
}

/*End Checklist css */


.TabsContainer  .nav-pills:not(.nav-pills-icons)>li>a {
    border-radius: 5px 5px 0px 0px;
        box-shadow: none !important;
}
.TabsContainer .nav-pills>li i
{
      display: inline;
      font-size: 16px;
      padding: 0;
}
.TabsContainer .nav-pills>li a
{
    background-color: #eee;
}
.TabsContainer .nav-pills>li a:hover
{
    background-color: #ff9800;
    color: #fff;
}
.TabsContainer  .tab-pane
{
   padding:10px;
}
.TabsContainer .TabsContent
{
      padding-top: 10px;
      border: 1px solid #ff9800;
}
.SummaryCard table tr td
{
    width:50%;
}
.tablecard .btn, .navbar .navbar-nav>li>a.btn
{
     padding: 0px 5px;
     margin: 0px 1px;
}
.TopButtonsCon .btn
{
 margin:0 !important;
}
a.add-btn,button.add-btn
{
    padding: 8px 15px !important;
}
.panel-body .table-responsive table tr:first-child td {
    border-top: none !important;
}
/*.panel-body .table-responsive table tr td:nth-child(even)*/
/*{*/
    /*font-weight: 400;*/
/*}*/
.table-scroll-x .table
{
    width: 150%;
    max-width: 150%;
}

.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th
{
    border-top: 1px solid #f9f9f9;
    /*text-transform: capitalize;*/
}
th span.sortingIcons
{
    float: left;
    width: 15px;
}

th span.sortingIcons svg
{
  display: block !important;
  color: #dfdfdf;
  cursor: pointer;
}
th span.sortingIcons .active svg
{
    color: #ff9800;
}
table.withSortingIcons thead tr th
{
    line-height: 30px;
}
/*.alert.alert-info*/
/*{*/
  /*background-color: #fff;*/
  /*color: #ff9800;*/
  /*border:1px solid #ff0000;*/
/*}*/
/*.alert.alert-info i*/
/*{*/
  /*color: #f44336;*/
/*}*/
/*.alert.alert-info .close i {*/
    /*color: #f44336;*/
/*}*/

.FilterCard
{
    margin: 3px !important;
}
.assetsTabs ul.nav-pills li a
{
    font-size: 11px;
    font-weight: 400;
    min-width: 90px;
    padding: 10px 5px;
}
.EditAssetTabs .assetsTabs ul.nav-pills li a
{
    padding: 10px;
}
.viewAssetTabs  .assetsTabs ul.nav-pills li a
{
    min-width: 80px;
}
span.red-star
{
    padding:0 5px;
    color:red;
}
.error-msg
{
    color: red;
}
.SelectWithAddbtnCon span.d-arrow-icon
{
    padding-right: 20px;
}
.SelectWithAddbtnCon .btn.btn-fab.btn-fab-mini
{
    margin-top: 23px;
}
.alert.alert-with-icon
{
    z-index: 10005 !important;
    top: 45% !important;
}
/*.ps-container .ps-scrollbar-y-rail {*/
    /*opacity: 1;*/
    /*filter: alpha(opacity = 100);*/
/*}*/

.jobcards .card [data-background-color],.cardsCon .card [data-background-color]
{
 /* border: 1px solid #ccc;
  background: #fff;*/
  padding:10px 30px;
}
/* ... */

